update bottom navigation bar + fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,13 +22,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity android:name=".Profile">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,8 +29,30 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main" />
+        <activity
+            android:name=".FundActivity"
+            android:label="@string/title_activity_fund"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="projet_commun.sciagoapp.MainActivity" />
+        </activity>
+        <activity
+            android:name=".ConnectActivity"
+            android:label="@string/title_activity_connect">
+        </activity>
+        <activity
+            android:name=".BottomBarActivity"
+            android:label="@string/title_activity_bottom_bar_activity">
+        </activity>
+        <!--activity
+            android:name=".BottomBarFragment"
+            android:label="@string/title_activity_bottom_bar_fragment">
+        </activity-->
     </application>
 
 </manifest>
