--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,11 +32,13 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main" />
-        <activity
+        <activity android:name=".NewActivity"
+            android:parentActivityName=".MainActivity"/>
+        <!--activity
             android:name=".BottomBarActivity"
             android:label="@string/title_activity_bottom_bar_activity">
         </activity>
-        <!--activity
+        <activity
             android:name=".BottomBarFragment"
             android:label="@string/title_activity_bottom_bar_fragment">
         </activity-->
