--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,16 +32,27 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main" />
-        <!--activity android:name=".Profile"
-            android:parentActivityName=".MainActivity"/-->
-        <!--activity
+        <activity
+            android:name=".InscriptionActivity">
+            <!--intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter-->
+        </activity>
+        <!--
+            activity android:name=".Profile"
+            android:parentActivityName=".MainActivity"/
+        -->
+        <!--
+        activity
             android:name=".BottomBarActivity"
             android:label="@string/title_activity_bottom_bar_activity">
         </activity>
         <activity
             android:name=".BottomBarFragment"
             android:label="@string/title_activity_bottom_bar_fragment">
-        </activity-->
+        </activity
+        -->
     </application>
 
 </manifest>
