--- a/build.gradle
+++ b/build.gradle
@@ -4,16 +4,23 @@ buildscript {
     repositories {
         jcenter()
         maven {
-            url 'https://maven.google.com/'
-            name 'Google'
+            //url 'https://maven.google.com/'
+            //name 'Google'
+            url "https://plugins.gradle.org/m2/"
         }
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.android.tools.build:gradle:3.1.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        //classpath "com.android.tools.build:gradle:2.3.3"    // for compatibility with SonarQube
+
+        classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.6.2'
+        //classpath "org.jacoco:jacoco-maven-plugin:0.8.1"
+        //classpath "org.jacoco:org.jacoco.agent:0.8.1"
+        //classpath "org.jacoco:org.jacoco.ant:0.8.1"
     }
 }
 
